[project]
name = "content-finder"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies=["requests==2.32.4", "python-socketio==5.13.0", "beautifulsoup4==4.13.4", "redis==6.2.0"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[tool.flake8]
extend-ignore = ["E203", "E501", "W503"]

[tool.isort]
profile = "black"
