[project]
name = "content-finder"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies=["requests==2.32.5", "python-socketio[client]==5.13.0", "beautifulsoup4==4.13.5", "redis==6.4.0"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[tool.flake8]
extend-ignore = ["E203", "E501", "W503"]

[tool.isort]
profile = "black"
