[project]
name = "content-finder"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies=["requests==2.32.5", "beautifulsoup4==4.13.5", "lxml==6.0.2", "redis==6.4.0"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[tool.flake8]
extend-ignore = ["E203", "E501", "W503"]

[tool.isort]
profile = "black"
